# georec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: correction.hxx  rectification.hxx  transformation.hxx  utilities.hxx
lib/: .gitignore  CMakeLists.txt  correction.cxx  rectification.cxx  transformation.cxx  utilities.cxx
src/: .gitignore  CMakeLists.txt  georec.cxx
